renamed files from ep_* to ep-* to match polymer elements

--- a/manifest.json
+++ b/manifest.json
@@ -30,8 +30,8 @@
   },
   "background": {
     "scripts": [
-      "ep_main.js",
-      "ep_auth.js"
+      "ep-main.js",
+      "ep-auth.js"
     ],
     "persistent": false
   },
